// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keyframes babel 6 dynamic change import 1`] = `
"import { keyframes as frames } from 'emotion';
const rotate360 =
/*#__PURE__*/
frames(\\"from{transform:rotate(0deg);}to{transform:rotate(360deg);}\\");
const rotate3601 = keyframes\`
        from {
          transform: rotate(0deg);
        }
        to {
          transform: rotate(360deg);
        }
    \`;"
`;

exports[`keyframes babel 6 keyframes basic 1`] = `
"const rotate360 =
/*#__PURE__*/
keyframes(\\"from{transform:rotate(0deg);}to{transform:rotate(360deg);}\\");"
`;

exports[`keyframes babel 6 keyframes with interpolation 1`] = `
"const rotate360 =
/*#__PURE__*/
keyframes(\\"from{transform:rotate(0deg);}to{transform:rotate(\\", endingRotation, \\");}\\");"
`;

exports[`keyframes babel 6 static change import 1`] = `
"const rotate360 =
/*#__PURE__*/
frames(\\"from{transform:rotate(0deg);}to{transform:rotate(360deg);}\\");
const rotate3601 = keyframes\`
        from {
          transform: rotate(0deg);
        }
        to {
          transform: rotate(360deg);
        }
    \`;"
`;

exports[`keyframes babel 7 dynamic change import 1`] = `
"import { keyframes as frames } from 'emotion';
const rotate360 =
/*#__PURE__*/
frames(\\"from{transform:rotate(0deg);}to{transform:rotate(360deg);}\\");
const rotate3601 = keyframes\`
        from {
          transform: rotate(0deg);
        }
        to {
          transform: rotate(360deg);
        }
    \`;"
`;

exports[`keyframes babel 7 keyframes basic 1`] = `
"const rotate360 =
/*#__PURE__*/
keyframes(\\"from{transform:rotate(0deg);}to{transform:rotate(360deg);}\\");"
`;

exports[`keyframes babel 7 keyframes with interpolation 1`] = `
"const rotate360 =
/*#__PURE__*/
keyframes(\\"from{transform:rotate(0deg);}to{transform:rotate(\\", endingRotation, \\");}\\");"
`;

exports[`keyframes babel 7 static change import 1`] = `
"const rotate360 =
/*#__PURE__*/
frames(\\"from{transform:rotate(0deg);}to{transform:rotate(360deg);}\\");
const rotate3601 = keyframes\`
        from {
          transform: rotate(0deg);
        }
        to {
          transform: rotate(360deg);
        }
    \`;"
`;

exports[`keyframes extract babel 6 dynamic change import 1`] = `
"import \\"./emotion.emotion.css\\";
import { keyframes as frames } from 'emotion';
const rotate360 = \\"css-rotate360-bhsghd\\";
const rotate3601 = keyframes\`
        from {
          transform: rotate(0deg);
        }
        to {
          transform: rotate(360deg);
        }
    \`;


emotion.emotion.css
@-webkit-keyframes css-rotate360-bhsghd{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}@keyframes css-rotate360-bhsghd{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}"
`;

exports[`keyframes extract babel 6 keyframes basic 1`] = `
"import \\"./emotion.emotion.css\\";
const rotate360 = \\"css-rotate360-bhsghd\\";


emotion.emotion.css
@-webkit-keyframes css-rotate360-bhsghd{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}@keyframes css-rotate360-bhsghd{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}"
`;

exports[`keyframes extract babel 6 keyframes with interpolation 1`] = `
"const rotate360 =
/*#__PURE__*/
keyframes(\\"from{transform:rotate(0deg);}to{transform:rotate(\\", endingRotation, \\");}\\");"
`;

exports[`keyframes extract babel 6 static change import 1`] = `
"import \\"./emotion.emotion.css\\";
const rotate360 = \\"css-rotate360-bhsghd\\";
const rotate3601 = keyframes\`
        from {
          transform: rotate(0deg);
        }
        to {
          transform: rotate(360deg);
        }
    \`;


emotion.emotion.css
@-webkit-keyframes css-rotate360-bhsghd{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}@keyframes css-rotate360-bhsghd{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}"
`;

exports[`keyframes extract babel 7 dynamic change import 1`] = `
"import \\"./emotion.emotion.css\\";
import { keyframes as frames } from 'emotion';
const rotate360 = \\"css-rotate360-bhsghd\\";
const rotate3601 = keyframes\`
        from {
          transform: rotate(0deg);
        }
        to {
          transform: rotate(360deg);
        }
    \`;


emotion.emotion.css
@-webkit-keyframes css-rotate360-bhsghd{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}@keyframes css-rotate360-bhsghd{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}"
`;

exports[`keyframes extract babel 7 keyframes basic 1`] = `
"import \\"./emotion.emotion.css\\";
const rotate360 = \\"css-rotate360-bhsghd\\";


emotion.emotion.css
@-webkit-keyframes css-rotate360-bhsghd{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}@keyframes css-rotate360-bhsghd{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}"
`;

exports[`keyframes extract babel 7 keyframes with interpolation 1`] = `
"const rotate360 =
/*#__PURE__*/
keyframes(\\"from{transform:rotate(0deg);}to{transform:rotate(\\", endingRotation, \\");}\\");"
`;

exports[`keyframes extract babel 7 static change import 1`] = `
"import \\"./emotion.emotion.css\\";
const rotate360 = \\"css-rotate360-bhsghd\\";
const rotate3601 = keyframes\`
        from {
          transform: rotate(0deg);
        }
        to {
          transform: rotate(360deg);
        }
    \`;


emotion.emotion.css
@-webkit-keyframes css-rotate360-bhsghd{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}@keyframes css-rotate360-bhsghd{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}"
`;
